--- a/accommodations.html
+++ b/accommodations.html
@@ -5,6 +5,28 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    
+    <header>
+      <img src="images/beauty.jpg" alt="Resort Logo">
+      <div id=menu_bar>
+          <div>
+            <h2><a href="index.html">Home</a></h2>
+          </div>
+          <div>
+            <h2><a href="accommodations.html">Accommodations</a></h2>
+          </div>
+          <div>
+            <h2><a href="activities.html">Activities</a></h2>
+          </div>
+          <div>
+            <h2><a href="travel.html">Travel Arrangements</a></h2>
+          </div>
+          <div>
+            <h2><a href="pictures.html">Gallery</a></h2>
+          </div>
+          <div>
+            <h2><a href="contact.html">Contacts</a></h2>
+          </div>
+      </div>
+  </header>
   </body>
 </html>
