--- a/pictures.html
+++ b/pictures.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <img src="images/beauty.jpg" alt="Resort Logo">
+      <img src="images/beauty.jpg" id="logo" alt="Resort Logo">
       <div id=menu_bar>
         <div>
           <h2><a href="index.html">Home</a></h2>
