added content to pages

--- a/accommodations.html
+++ b/accommodations.html
@@ -28,5 +28,13 @@
           </div>
       </div>
   </header>
+  <img src="images/bed.jpg" alt="bed image">
+  <h1>Our Various Accomodation Options</h1>
+  <ol>
+    <li>Single Room</li>
+    <li>Double Room</li>
+    <li>Executive Suite</li>
+    <li>Presidential Suite</li>
+  </ol>
   </body>
 </html>
