--- a/index.html
+++ b/index.html
@@ -28,5 +28,11 @@
         </div>
       </div>
     </header>
+
+    <img src="images/landing.jpg" alt="beach image">
+
+    <h1>Welcome to Awesome Resort</h1>
+    <p>We would like to welcome you to Awesome Resort. Sit back, relax and enjoy your stay in this hidden gem.</p>
+    
   </body>
 </html>
