--- a/travel.html
+++ b/travel.html
@@ -28,5 +28,15 @@
             </div>
           </div>
         </header>
+        <p>There are many ways to get to Diani. Here are a few:</p>
+        <ul>
+          <li>Rail</li>
+          <p>SGR comes from Syokimau to Mombasa. You can pick a taxi or call us to organize your transfer.</p>
+          <li>Plane</li>
+          <p>From JKIA to Mombasa</p>
+          <li>Ship</li>
+          <p>Through any ship that docks in Mombasa</p>
+          <li>Road</li>
+        </ul>  
   </body>
 </html>
