--- a/activities.html
+++ b/activities.html
@@ -28,5 +28,11 @@
             </div>
           </div>
         </header>
+        <h1>Things to do</h1>
+        <ul>
+          <li>Hiking</li>
+          <li>Swimming</li>
+          <li>Cycling</li>
+        </ul>
   </body>
 </html>
