--- a/contact.html
+++ b/contact.html
@@ -28,5 +28,10 @@
             </div>
           </div>
         </header>
+
+        <h1>Our Contacts</h1>
+        <h2>You can reach us on:</h2>
+
+        <strong>awesomeresort@gmail.com</strong>
   </body>
 </html>
