--- a/pictures.html
+++ b/pictures.html
@@ -28,5 +28,11 @@
             </div>
           </div>
         </header>    
+        <div id="gallery">
+          <img src="images/bask.jpg" alt="basking">
+          <img src="images/fun.jpg" alt="fun">
+          <img src="images/palms.jpg" alt="palms">
+          <img src="images/lagoon.jpg" alt="lagoon">
+        </div>
   </body>
 </html>
