change list items in travel page for emphasis

--- a/travel.html
+++ b/travel.html
@@ -30,13 +30,13 @@
         </header>
         <p>There are many ways to get to Diani. Here are a few:</p>
         <ul>
-          <li>Rail</li>
+          <li><em>Rail</em></li>
           <p>SGR comes from Syokimau to Mombasa. You can pick a taxi or call us to organize your transfer.</p>
-          <li>Plane</li>
+          <li><strong>Plane</strong></li>
           <p>From JKIA to Mombasa</p>
-          <li>Ship</li>
+          <li><em>Ship</em></li>
           <p>Through any ship that docks in Mombasa</p>
-          <li>Road</li>
+          <li><strong>Road</strong></li>
         </ul>  
   </body>
 </html>
