--- a/travel.html
+++ b/travel.html
@@ -30,11 +30,11 @@
         </header>
         <p>There are many ways to get to Diani. Here are a few:</p>
         <ul>
-          <li><em>Rail</em></li>
+          <li><strong>Rail</strong></li>
           <p>SGR comes from Syokimau to Mombasa. You can pick a taxi or call us to organize your transfer.</p>
           <li><strong>Plane</strong></li>
           <p>From JKIA to Mombasa</p>
-          <li><em>Ship</em></li>
+          <li><strong>Ship</strong></li>
           <p>Through any ship that docks in Mombasa</p>
           <li><strong>Road</strong></li>
         </ul>  
